--- a/03_Web_Annotations/demo/pom.xml
+++ b/03_Web_Annotations/demo/pom.xml
@@ -35,6 +35,18 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!-- Web support: @Controller, @RestController, REST APIs -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- Thymeleaf view rendering -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
