--- a/06_Transactions/demo/pom.xml
+++ b/06_Transactions/demo/pom.xml
@@ -35,6 +35,25 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!-- Web support for building REST APIs -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<!-- Spring Boot Starter for Spring Data JPA (for @Transactional, @EnableTransactionManagement, and DB interaction) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- In-memory H2 Database for testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
